--- a/00_template/Rakefile
+++ b/00_template/Rakefile
@@ -1,7 +1,7 @@
 # encoding:utf-8
 namespace :dojo do
   
-  desc "install gems.(execute bundle install)" 
+  desc "install gems" 
   task "install" do
     sh "bundle install --path ./vendor/bundle"
   end
